Alterações para responsividade

--- a/index.html
+++ b/index.html
@@ -205,6 +205,43 @@
       .steps{grid-template-columns: repeat(5, minmax(0, 1fr));}
     }
 
+/* ====== FIX RESPONSIVO (MOBILE) ====== */
+
+/* 1) Respiro lateral consistente no site todo */
+.container{ padding-inline:16px; }
+
+/* 2) Empilhar grids e ajustar espaçamentos no mobile */
+@media (max-width:960px){
+  .grid, .twocol, .contact-grid{ 
+    grid-template-columns: 1fr !important;  /* força 1 coluna */
+    gap: 14px !important;
+  }
+  .steps{ gap: 12px !important; }
+  .hero{ padding: 28px 0 !important; }
+}
+
+/* 3) Evitar “escape” horizontal de tabelas e conteúdo largo */
+.cred-table{
+  display:block;              /* permite rolagem horizontal se precisar */
+  max-width:100%;
+  overflow-x:auto;
+  -webkit-overflow-scrolling:touch;
+}
+
+/* 4) Garantir que imagens e caixas de imagem não estourem a largura */
+img{ max-width:100%; height:auto; }
+.hero-card .imgbox{ width:100%; }
+
+/* 5) Header no mobile: centralizado e sem itens “soltos” */
+@media (max-width:960px){
+  .topbar .nav{ flex-direction:column; align-items:center; gap:.5rem; }
+  .topbar .brand{ justify-content:center; width:100%; }
+  .topbar #main-menu{ display:none !important; }  /* esconde o menu horizontal */
+  .topbar .cta-btn{ 
+    width:100%; max-width:360px; display:block; text-align:center; 
+    margin-top:.5rem;
+  }
+}
 
   </style>
 
